# cookiecutter-poetry

./: cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  .gitignore  pyproject.toml
